# prayer.rs

./: .gitignore  Cargo.toml  LANGUAGE.md  PIPELINE.md  README.md  deny.toml  spacemolt-openapi.json
docs/: autonomous-agent-mode-plan.md  game-state-vfs-mapping.md  prayer-mcp-virtual-filesystem-plan.md  run-script-diff-return-plan.md  stateless-csharp-parity-matrix.md
prayer-api/: Cargo.toml
prayer-api/src/: contracts.rs  lib.rs  main.rs  routes.rs  service.rs  spacemolt_auth.rs  state_mapping.rs
prayer-compat-adapter/: Cargo.toml
prayer-compat-adapter/src/: lib.rs
prayer-mcp/: Cargo.toml  build.rs
prayer-mcp-client-ts/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
prayer-mcp-client-ts/src/client/: AgentsPanel.tsx  App.tsx  ChatPane.tsx  InputBar.tsx  api.ts  main.tsx  style.css
prayer-mcp-client-ts/src/server/: index.ts  llm.ts  logger.ts  mcp.ts  player_agent.ts  session_proxy.ts  tool_loop.ts
prayer-mcp-client-ts/src/shared/: types.ts
prayer-mcp/src/: client.rs  dsl_ref.rs  dsl_ref_footer.txt  dsl_ref_header.txt  dsl_ref_overrides.txt  dsl_reference.txt  main.rs  resources.rs  server.rs  session_handles.rs  session_store.rs  tools.rs  tutorial_mining.md  vfs.rs
prayer-runtime/: Cargo.toml
prayer-runtime/src/: catalog.rs  dsl.rs  engine.rs  graph.rs  lib.rs  state.rs  transport.rs
prayer-runtime/src/dsl/: analyzer.rs  ast.rs  parser.rs
prayer-runtime/src/dsl/render/: mod.rs
prayer-runtime/src/transport/: orchestrator.rs
scripts/: prayer-mcp-client-smoke.sh  prayer-mcp-client-test.sh  run-prayer-chat-ts.sh  run-prayer-chat.ps1  run-prayer-chat.sh
