[workspace]
members = [
  "prayer-runtime",
  "prayer-api",
  "prayer-compat-adapter",
  "prayer-mcp",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT"
authors = ["Prayer Runtime Team"]

[workspace.dependencies]
ariadne = "0.5"
axum = { version = "0.7", features = ["macros", "json"] }
chumsky = "0.10"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
parking_lot = "0.12"
indexmap = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive", "env"] }
rmcp = { version = "1", features = ["server", "transport-io", "transport-streamable-http-server"] }
regex = "1"
globset = "0.4"
anyhow = "1"

[workspace.lints.clippy]
unwrap_used = "deny"
todo = "deny"
panic = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"
