[package]
name = "prayer-compat-adapter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
prayer-api = { path = "../prayer-api" }
prayer-runtime = { path = "../prayer-runtime" }
