[package]
name = "prayer-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
chumsky.workspace = true
ariadne.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tokio.workspace = true
